--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Iliyan Kupenov
-description: A results-driven, self-motivated, analytical and innovative Software Engineer enthusiastic about developing practical and time-saving software solutions. Strong in design and problem-solving skills. Fluent in C# .NET and JavaScript.
+description: Software Engineer
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-architect
