--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Iliyan Kupenov
 description: Software Engineer
 google_analytics: 
 show_downloads: false
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
 
 gems:
   - jekyll-mentions
